finish POM config for MOP